syntax = "proto3";

package tenant.v1;
option go_package = "github.com/tuannguyenandpadcojp/go-training/lqm/week7/day1/internal/pb;tenantv1";

import "v1/tenant.proto";

service TenantService {
    rpc GetTenant (GetTenantRequest) returns (GetTenantResponse) {}
}

message GetTenantResponse {
    Tenant tenant = 1;
}

message GetTenantRequest {
    string id = 1;
}
